# app

./: .eslintrc.js  .gitignore  .prettierignore  README.md  SECURITY.md  app.json  babel.config.js  index.html  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  spike-rn-e2e.yml  spike-rn-ffi.yml
app/: _layout.tsx  handover.tsx  reflection.tsx
app/(tabs)/: _layout.tsx  calm.tsx  help.tsx  index.tsx  stats.tsx
app/calm/: [id].tsx
app/checkin/: _layout.tsx  confirm.tsx  index.tsx  words.tsx
app/measure/: [type].tsx
app/onboarding/: _layout.tsx  age.tsx  index.tsx  privacy.tsx
app/plan/: [section].tsx
assets/audio/: README.md
core/: Cargo.toml
core/lumi-core/: Cargo.toml
core/lumi-core/src/: lib.rs
core/lumi-core/src/crisis/: hours.rs  ingest.rs  json.rs  matcher.rs  mod.rs  model.rs
core/lumi-core/tests/: crisis_invariants.rs
core/lumi-core/tests/fixtures/: capld_linky_duvery_cr.json
core/lumi-crdt/: Cargo.toml
core/lumi-crdt/src/: lib.rs
core/lumi-ffi/: Cargo.toml
core/lumi-ffi/src/: lib.rs
core/lumi-sync-client/: Cargo.toml
core/lumi-sync-client/src/: lib.rs
core/lumi-wasm/: Cargo.toml
core/lumi-wasm/src/: lib.rs
design/: README.md  package-lock.json  package.json  style-dictionary.config.js
design/tokens/: color.json
docs/: crisis-line-recommender.md  cz-crisis-data-checklist.md  state-of-mind.md
docs/adr/: 0001-cross-platform-architecture.md  0002-interoperability-fhir-smart-openmhealth.md  0003-v1-ui-binding-evaluation.md
drizzle/: 0000_init.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
public/: manifest.webmanifest
server/: Cargo.toml
server/lumi-sync-server/: Cargo.toml
server/lumi-sync-server/src/: main.rs
spikes/: README.md
spikes/rn-ffi/: SPIKE-REPORT.md  package.json  ubrn.config.yaml
spikes/rn-ffi/e2e/: App.roundtrip.tsx
spikes/rn-ffi/rust/lumi-ffi-spike/: Cargo.toml
spikes/rn-ffi/rust/lumi-ffi-spike/src/: lib.rs
spikes/rn-handjsi/: README.md  RUNBOOK.md
spikes/rn-handjsi/rust/lumi-ffi-cabi/: Cargo.toml
spikes/rn-handjsi/rust/lumi-ffi-cabi/src/: lib.rs
spikes/rn-handjsi/scripts/: build-rust-android.sh
spikes/rn-handjsi/turbo-module/: App.tsx  CMakeLists.additions.cmake  NativeLumiCrypto.ts
spikes/rn-handjsi/turbo-module/cpp/: LumiCryptoImpl.cpp
spikes/rn-nitro/: App.tsx  README.md  RUNBOOK.md
spikes/rn-nitro/nitro/: CMakeLists.additions.cmake  LumiCrypto.nitro.ts  nitro.json
spikes/rn-nitro/nitro/cpp/: HybridLumiCrypto.cpp  HybridLumiCrypto.hpp
spikes/rn-nitro/reference/: LumiCryptoImpl.h
spikes/rn-nitro/rust/lumi-ffi-cabi/: cbindgen.toml
spikes/rn-nitro/scripts/: build-rust-android.sh
src/: App.jsx  App.tsx  model.js  model.ts  store.js  store.ts  store.tsx  theme.js  theme.ts
src/components/: Breath.jsx  Breath.tsx  CTA.jsx  CTA.tsx  Header.jsx  Header.tsx  LumiMark.jsx  LumiMark.tsx  MoodShape.jsx  MoodShape.tsx  Screen.jsx  Screen.tsx  TabBar.jsx  TabBar.tsx
src/db/: backup.ts  connect.ts  hooks.ts  key.ts  migrateLegacy.ts  provider.tsx  repo.ts  schema.ts  types.ts
src/ds/: Badge.jsx  Badge.tsx  Button.jsx  Button.tsx  Card.jsx  Card.tsx  Chip.jsx  Chip.tsx  Icon.jsx  Icon.tsx  IconButton.jsx  IconButton.tsx  Input.jsx  Input.tsx  ListItem.jsx  ListItem.tsx  ProgressRing.jsx  ProgressRing.tsx  Switch.jsx  Switch.tsx  index.js  index.ts
src/features/calm/: BlindBreathScreen.tsx  CalmScreen.tsx  PlayerScreen.tsx  blindRhythm.ts  content.ts
src/features/checkin/: ConfirmScreen.tsx  Step1Screen.tsx  Step2Screen.tsx  draft.tsx
src/features/help/: HandoverScreen.tsx  HelpScreen.tsx  PlanSectionScreen.tsx  crisisCard.ts  plan.ts
src/features/home/: HomeScreen.tsx
src/features/measure/: MeasureScreen.tsx  definitions.ts  scoring.ts
src/features/onboarding/: AgeStep.tsx  NameStep.tsx  PrivacyStep.tsx  Shell.tsx
src/features/stats/: BackupCard.tsx  InsightsCard.tsx  ReflectionScreen.tsx  RemindersCard.tsx  StatsScreen.tsx  insights.ts  reflection.ts  reminders.ts
src/lib/: featureFlags.ts  haptics.ts
src/screens/: Calm.jsx  Calm.tsx  Checkin.jsx  Checkin.tsx  Help.jsx  Help.tsx  Home.jsx  Home.tsx  Onboarding.jsx  Onboarding.tsx  Stats.jsx  Stats.tsx
src/styles/: app.css  ds.css  index.css
src/styles/tokens/: base.css  colors.css  motion.css  spacing.css  typography.css
test/: app.test.jsx  app.test.tsx  blindBreath.test.tsx  blindBreathCancel.test.tsx  blindRhythm.test.ts  crisisCard.test.ts  crisisPlan.test.tsx  db.test.ts  handover.test.tsx  insights-ui.test.tsx  insights.test.ts  measure.test.tsx  model.test.js  model.test.ts  reflection.test.ts  reminders.test.tsx  scoring.test.ts  setup.js  setup.ts  tags.test.tsx
test/helpers/: testDb.ts
