[package]
name = "lumi-ffi"
version = "0.0.0"
edition = "2021"
publish = false
description = "FFI facade over the Lumi core. M0 stub (dependency-free). The real binding — uniffi-bindgen-react-native (JSI) — is the subject of M1 spike #1 (ADR 0001 §13) and is wired only if/when that GO/NO-GO gate passes."

[dependencies]
lumi-core = { path = "../lumi-core" }
lumi-crdt = { path = "../lumi-crdt" }
lumi-sync-client = { path = "../lumi-sync-client" }

[lints.rust]
unsafe_code = "forbid"
