[package]
name = "lumi-ffi-spike"
version = "0.0.0"
edition = "2021"
publish = false
description = "THROWAWAY spike #1: representative §1-safe UniFFI surface over real pure-Rust crypto, to GO/NO-GO uniffi-bindgen-react-native."

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "lumi_ffi_spike"

[dependencies]
# uniffi pinned to match uniffi-bindgen-react-native 0.29.x (the binder under test).
uniffi = "0.29"
# Vetted pure-Rust crypto only (never hand-rolled); all C-free, cross-compile clean.
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[lints.rust]
unsafe_code = "forbid"
